# ouestcharlie-py-toolkit

./: .gitignore  README.md  README_DEV.md  SKELETON_COMPLETE.md  hatch_build.py  py_toolkit_LLD.md  py_toolkit_LLD_rationale.md  py_toolkit_open-points.md  pyproject.toml
.claude/: CLAUDE.md
.github/workflows/: _build.yml  build.yml  publish.yml
avif-grid/: Cargo.toml  README.md
avif-grid/src/: main.rs
image-proc/: Cargo.toml  README.md  build.rs
image-proc/src/: main.rs
src/ouestcharlie_toolkit/: __init__.py  backend.py  fields.py  hashing.py  image_proc.py  logging.py  manifest.py  photo.py  preview_builder.py  progress.py  schema.py  server.py  thumbnail.py  thumbnail_builder.py  xmp.py
src/ouestcharlie_toolkit/backends/: __init__.py  local.py
tests/: __init__.py  test_backend.py  test_helpers.py  test_image_proc.py  test_logging.py  test_manifest.py  test_photo.py  test_preview_builder.py  test_schema.py  test_thumbnail.py  test_thumbnail_builder.py  test_xmp.py
tests/sample-images/: .gitignore  001.ref.xmp  002.ref.xmp
tests/sample-images/.ouestcharlie/: manifest.json
tests_integration/: test_image_proc_integration.py
