[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ouestcharlie-toolkit"
version = "0.1.0"
description = "Shared Python toolkit for OuEstCharlie agents"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0",
    "pyexiv2>=2.8",
    "Pillow>=10.0",
]

[project.optional-dependencies]
# rawpy has no wheel for macOS x86_64; agents that need RAW pixel access opt in.
raw = [
    "rawpy>=0.19",
]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/ouestcharlie_toolkit"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
tmp_path_retention_policy = "none"

[tool.mypy]
python_version = "3.11"
strict = true
