[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[project]
name = "ouestcharlie-py-toolkit"
version = "0.1.1"
description = "Shared Python toolkit for OuEstCharlie agents"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
license-files = ["LICENSE*"]
authors = [
    { name = "Antoine Hue" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0",
    "pyexiv2>=2.8",
    "blake3>=1.0.8",
]

[project.optional-dependencies]
dev = [
    "mypy>=1.0",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project.urls]
Homepage = "https://github.com/ouestcharlie/ouestcharlie"
Issues = "https://github.com/ouestcharlie/ouestcharlie/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/ouestcharlie_toolkit"]
artifacts = ["src/ouestcharlie_toolkit/bin/*"]

[tool.ruff]
target-version = "py311"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.pytest.ini_options]
asyncio_mode = "strict"
tmp_path_retention_policy = "none"

[tool.mypy]
python_version = "3.11"
strict = true
