[package]
name = "avif-grid"
version = "0.1.0"
edition = "2021"
description = "Assemble JPEG tiles into an AVIF grid container for OuEstCharlie."

[[bin]]
name = "avif-grid"
path = "src/main.rs"

[build-dependencies]
# Used in build.rs to locate and link the system libavif (brew install libavif).
pkg-config = "0.3"

[dependencies]
# JPEG tile decoding.
image = { version = "0.25", default-features = false, features = ["jpeg"] }
# JSON I/O (stdin/stdout protocol).
serde = { version = "1", features = ["derive"] }
serde_json = "1"
