[package]
name = "image-proc"
version = "0.2.0"
edition = "2021"
description = "Image processing coprocessor for OuEstCharlie: AVIF grid assembly and JPEG preview generation."

[[bin]]
name = "image-proc"
path = "src/main.rs"

[build-dependencies]
# No system dependencies — ravif encodes AVIF in pure Rust.

[features]
# RAW format support (CR2, NEF, ARW, DNG, RAF, ORF, RW2, PEF) via rawler (pure Rust).
raw = ["dep:rawler"]
# HEIC/HEIF support via libheif-rs (requires: brew install libheif / apt install libheif-dev).
heic = ["dep:libheif-rs"]

[dependencies]
# Image decoding: JPEG, PNG, WebP, TIFF (pure Rust, no system deps).
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "tiff"] }
# Pure-Rust AVIF encoder (replaces libavif — no system deps, cross-platform).
# Uses rav1e with nasm assembly for optimised encoding (install nasm before building).
ravif = "0.11"
# Pixel type used by ravif's Img<&[RGB8]> API.
rgb = "0.8"
# Parallel photo decoding.
rayon = "1"
# JSON I/O (stdin/stdout protocol).
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# RAW photo decoding (pure Rust — no system deps; API is pre-1.0, pin the version).
[dependencies.rawler]
version = "=0.7.2"
optional = true

# HEIC/HEIF decoding (requires system libheif).
[dependencies.libheif-rs]
version = "1"
optional = true
